--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -6,6 +6,5 @@ RUN chown root /
 
 RUN chmod -R 777 /docker-entrypoint-initdb.d
 
-COPY schema.sql /docker-entrypoint-initdb.d/
+COPY init.sql /docker-entrypoint-initdb.d/
 
-COPY data.sql /docker-entrypoint-initdb.d/
